k8s-configs/api.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2020-12-11T06:42:06Z"
  generation: 1
  labels:
    k8s-app: api
  name: api
  namespace: default
  resourceVersion: "66673"
  selfLink: /apis/apps/v1/namespaces/default/deployments/api
  uid: f630cebd-3862-466b-896a-88b4ce63f3f7
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        k8s-app: api
      name: api
    spec:
      containers:
      - image: acr274545.azurecr.io/content-api
        imagePullPolicy: Always
        name: api
        resources:
          requests:
            cpu: "1"
            memory: 128Mi
        securityContext:
          privileged: false
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  conditions:
  - lastTransitionTime: "2020-12-11T06:42:06Z"
    lastUpdateTime: "2020-12-11T06:42:19Z"
    message: ReplicaSet "api-864c6b967b" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2020-12-11T06:51:47Z"
    lastUpdateTime: "2020-12-11T06:51:47Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  observedGeneration: 1
  replicas: 1
  unavailableReplicas: 1
  updatedReplicas: 1
