k8s-configs/content.ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: content-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
        - fabmedical-274545-ingress.eastus.cloudapp.azure.com
      secretName: tls-secret
  rules:
    - host: fabmedical-274545-ingress.eastus.cloudapp.azure.com
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: web
              servicePort: 80
          - path: /content-api/(.*)
            backend:
              serviceName: api
              servicePort: 3001
